--- a/html/task-1.html
+++ b/html/task-1.html
@@ -6,6 +6,8 @@
     <title>task-1</title>
 </head>
 <body>
+    <a href="../index.html">Назад</a>
+    <script src="./js/task-1.js"></script>
     
 </body>
 </html>
