--- a/html/task-3.html
+++ b/html/task-3.html
@@ -6,6 +6,7 @@
     <title>task-3</title>
 </head>
 <body>
-    
+        <a href="../index.html">Назад</a>
+        <script src="./js/task-3.js"></script>
 </body>
 </html>
