--- a/html/task-2.html
+++ b/html/task-2.html
@@ -6,6 +6,9 @@
     <title>task-2</title>
 </head>
 <body>
-    
+ 
+    <a href="../index.html">Назад</a>
+    <script src="./js/task-2.js"></script>
+
 </body>
 </html>
