--- a/html/task-1.html
+++ b/html/task-1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="../index.html">Назад</a>
-    <script src="./js/task-1.js"></script>
+    <script src="../js/task-1.js"></script>
     
 </body>
 </html>
