--- a/html/task-2.html
+++ b/html/task-2.html
@@ -8,7 +8,7 @@
 <body>
  
     <a href="../index.html">Назад</a>
-    <script src="./js/task-2.js"></script>
+    <script src="../js/task-2.js"></script>
 
 </body>
 </html>
