--- a/html/task-3.html
+++ b/html/task-3.html
@@ -7,6 +7,6 @@
 </head>
 <body>
         <a href="../index.html">Назад</a>
-        <script src="./js/task-3.js"></script>
+        <script src="../js/task-3.js"></script>
 </body>
 </html>
